--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <div class="menusection">
                 <nav>
                     <ul>
-                        <li> <a href=""> ACCUEIL</a></li>
-                        <li> <a href=""> ALIMENTAIRE</a></li>
-                        <li> <a href=""> EQUIPEMENT</a></li>
-                        <li> <a href=""> BIEN ETRE</a></li>
-                        <li> <a href=""> MODE</a></li>
-                        <li> <a href=""> CONTACT</a></li>
+                        <li> <a href="accueil.html"> ACCUEIL</a></li>
+                        <li> <a href="alimentaire.html"> ALIMENTAIRE</a></li>
+                        <li> <a href="equipement.html"> EQUIPEMENT</a></li>
+                        <li> <a href="bienetre.html"> BIEN ETRE</a></li>
+                        <li> <a href="mode.html"> MODE</a></li>
+                        <li> <a href="contact.html"> CONTACT</a></li>
                         <li class="fondblanc"> <a href="">PROMOS</a> </li>
                     </ul>
                 </nav>
@@ -563,7 +563,7 @@
                         <li>Mode</li>
                         <li>Promos</li>
                     </ul>
-                </div>
+                </dAiv>
                 <div class="newsletterfooter">
                     <h3>Newsletter</h3>
                     <div class="pp">Inscrivez-vous à notre newsletter et obtenez des offres exclusives que vous ne trouverez nulle part ailleurs directement dans votre  boîte de réception!</div>
