--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <title>IKA SUGU - 100% MALI</title>
 </head>
 
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
             <div class=" endheader ">
-                <img src="/assets/image/logo.png" alt="" width="150">
+                <img src="assets/image/logo.png" alt="" width="150">
                 <h1 class="px-15">Tous les produits 100% Made in Mali</h1>
                 <a class="bordur" href="">Panier -200 000 FCFA</a>
             </div>
@@ -66,7 +66,7 @@
             <div class="articlepromotion flex jcc wrap">
                 <div class="ariclepromolist">
                     <div>
-                        <img src="/assets/image/Sapec_Colorant.png" alt="">
+                        <img src="assets/image/Sapec_Colorant.png" alt="">
                     </div>
                     <div>
                         <a href="#">Sapec</a>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="ariclepromolist">
                     <div>
-                        <img src="/assets/image/Pack_Diago.png" alt="">
+                        <img src="assets/image/Pack_Diago.png" alt="">
                     </div>
                     <div>
                         <a href="#">Pack Diago</a>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="ariclepromolist">
                     <div>
-                        <img src="/assets/image/Bramali_Boisson.png" alt="">
+                        <img src="assets/image/Bramali_Boisson.png" alt="">
                     </div>
                     <div>
                         <a href="#">Pack Bramali Boisson</a>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="ariclepromolist">
                     <div>
-                        <img src="/assets/image/Cuve2_Fofy.png" alt="">
+                        <img src="assets/image/Cuve2_Fofy.png" alt="">
                     </div>
                     <div>
                         <a href="#">Cuve Fofy</a>
@@ -114,7 +114,7 @@
                 </div>
                 <div class="ariclepromolist">
                     <div>
-                        <img src="/assets/image/Bonbon_Waraba_Gingimbre (1).png" alt="">
+                        <img src="assets/image/Bonbon_Waraba_Gingimbre (1).png" alt="">
                     </div>
                     <div>
                         <a href="#">Bonbon Waraba <br> Gimgembre</a>
@@ -147,7 +147,7 @@
                 <div class="articlepromotion flex jcc">
                     <div class="ariclepromolist">
                         <div>
-                            <img src="/assets/image/seau-inox-toilette-seche-sans-base-.png" alt="">
+                            <img src="assets/image/seau-inox-toilette-seche-sans-base-.png" alt="">
                         </div>
                         <div>
                             <a href="#">Seau Inox Toilette</a>
@@ -159,7 +159,7 @@
                     </div>
                     <div class="ariclepromolist">
                         <div>
-                            <img src="/assets/image/Pile_Massa.png" alt="">
+                            <img src="assets/image/Pile_Massa.png" alt="">
                         </div>
                         <div>
                             <a href="#">Pile Massa</a>
@@ -171,7 +171,7 @@
                     </div>
                     <div class="ariclepromolist">
                         <div>
-                            <img src="/assets/image/Pagne.png" alt="">
+                            <img src="assets/image/Pagne.png" alt="">
                         </div>
                         <div>
                             <a href="#">Pagne Trois Tons</a>
@@ -184,7 +184,7 @@
                     </div>
                     <div class="ariclepromolist">
                         <div>
-                            <img src="/assets/image/Bonbon_Waraba_Gingimbre.png" alt="">
+                            <img src="assets/image/Bonbon_Waraba_Gingimbre.png" alt="">
                         </div>
                         <div>
                             <a href="#">Bonbon Waraba <br> Gimgembre</a>
@@ -296,7 +296,7 @@
                     </div>
                     <div class="articlecolonne">
                         <div>
-                            <img src="/assets/image/Sahel_Infusion1.png" alt="">
+                            <img src="assets/image/Sahel_Infusion1.png" alt="">
                         </div>
                         <div class="titrearticlecolonne">
                             <div>
@@ -311,7 +311,7 @@
 
                     <div class="articlecolonne">
                         <div>
-                            <img src="/assets/image/Bramali_Boisson.png" alt="">
+                            <img src="assets/image/Bramali_Boisson.png" alt="">
                         </div>
                         <div class="titrearticlecolonne">
                             <div>
@@ -326,7 +326,7 @@
 
                     <div class="articlecolonne">
                         <div>
-                            <img src="/assets/image/Diago_Bouteille.png" alt="">
+                            <img src="assets/image/Diago_Bouteille.png" alt="">
                         </div>
                         <div class="titrearticlecolonne">
                             <div>
@@ -352,7 +352,7 @@
                     </div>
                     <div class="articlecolonne">
                         <div>
-                            <img src="/assets/image/Pagne.png" alt="">
+                            <img src="assets/image/Pagne.png" alt="">
                         </div>
                         <div class="titrearticlecolonne">
                             <div>
@@ -367,7 +367,7 @@
 
                     <div class="articlecolonne">
                         <div>
-                            <img src="/assets/image/Sapec3.png" alt="">
+                            <img src="assets/image/Sapec3.png" alt="">
                         </div>
                         <div class="titrearticlecolonne">
                             <div>
@@ -382,7 +382,7 @@
 
                     <div class="articlecolonne">
                         <div>
-                            <img src="/assets/image/Pack_Jumbo.png" alt="">
+                            <img src="assets/image/Pack_Jumbo.png" alt="">
                         </div>
                         <div class="titrearticlecolonne">
                             <div>
@@ -409,7 +409,7 @@
                     </div>
                     <div class="articlecolonne">
                         <div>
-                            <img src="/assets/image/Cuve2_Fofy.png" alt="">
+                            <img src="assets/image/Cuve2_Fofy.png" alt="">
                         </div>
                         <div class="titrearticlecolonne">
                             <div>
@@ -424,7 +424,7 @@
 
                     <div class="articlecolonne">
                         <div>
-                            <img src="/assets/image/Chewingum_Waraba1.png" alt="">
+                            <img src="assets/image/Chewingum_Waraba1.png" alt="">
                         </div>
                         <div class="titrearticlecolonne">
                             <div>
@@ -439,7 +439,7 @@
 
                     <div class="articlecolonne">
                         <div>
-                            <img src="/assets/image/Pile_Massa.png" alt="">
+                            <img src="assets/image/Pile_Massa.png" alt="">
                         </div>
                         <div class="titrearticlecolonne">
                             <div>
@@ -477,13 +477,13 @@
                 </div>
                 <div class="flex jcsb padding">
                     <div class="logofooter">
-                        <img src="/assets/image/spirit.png" alt="">
+                        <img src="assets/image/spirit.png" alt="">
                     </div>
                     <div class="logofooter">
-                        <img src="/assets/image/ogp.png" alt="">
+                        <img src="assets/image/ogp.png" alt="">
                     </div>
                     <div class="logofooter">
-                        <img src="/assets/image/next.png" alt="">
+                        <img src="assets/image/next.png" alt="">
                     </div>
                 </div>
 
@@ -495,13 +495,13 @@
             </div>
             <div class="flex ">
                 <div class="padding">
-                    <img src="/assets/image/logo1.png" alt="">
+                    <img src="assets/image/logo1.png" alt="">
                 </div>
                 <div>
-                    <img src="/assets/image/logo2.png" alt="">
+                    <img src="assets/image/logo2.png" alt="">
                 </div>
                 <div>
-                    <img src="/assets/image/logo3.png" alt="">
+                    <img src="assets/image/logo3.png" alt="">
                 </div>
             </div>
 
@@ -517,16 +517,16 @@
                 </div>
                 <div class="flex jcsb padding">
                     <div class="logofooter">
-                        <img src="/assets/image/fofy.png" alt="">
+                        <img src="assets/image/fofy.png" alt="">
                     </div>
                     <div class="logofooter">
-                        <img src="/assets/image/logodiago.png" alt="">
+                        <img src="assets/image/logodiago.png" alt="">
                     </div>
                     <div class="logofooter">
                         <img src="/assets/image/gcm.png" alt="">
                     </div>
                     <div class="logofooter">
-                        <img src="/assets/image/gie.png" alt="">
+                        <img src="assets/image/gie.png" alt="">
                     </div>
                 </div>
 
