--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                         <li>Mode</li>
                         <li>Promos</li>
                     </ul>
-                </dAiv>
+                </div>
                 <div class="newsletterfooter">
                     <h3>Newsletter</h3>
                     <div class="pp">Inscrivez-vous à notre newsletter et obtenez des offres exclusives que vous ne trouverez nulle part ailleurs directement dans votre  boîte de réception!</div>
